Likely Fix for px gap
Char bar was using padding from default input. This will probably fix
it, but I can't build it anymore.

--- a/style.css
+++ b/style.css
@@ -299,6 +299,7 @@ summary {
   color: #EEEEEE;
   width: 100%;
   height: 100%;
+  padding:3px 4px 1px 4px;
 }
 
 
